Logged-in menu: Fix wrong color on active menu item

--- a/images/grunticon/_grunticon-fallback.less
+++ b/images/grunticon/_grunticon-fallback.less
@@ -1,5 +1,7 @@
 .grunticon-icon_heart { background-image: url('grunticon/png/icon_heart.png'); background-repeat: no-repeat; }
 
+.grunticon-icon_man { background-image: url('grunticon/png/icon_man.png'); background-repeat: no-repeat; }
+
 .grunticon-icon_pen { background-image: url('grunticon/png/icon_pen.png'); background-repeat: no-repeat; }
 
 .grunticon-icon_report { background-image: url('grunticon/png/icon_report.png'); background-repeat: no-repeat; }
